# DevOps-Ai-CoPilot

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/agents/: monitor.py  rca.py  remediation.py  reporting.py  severity.py  state.py  supervisor.py  verification.py
backend/app/core/: config.py  database.py  logging.py  redis.py  security.py
backend/app/routers/: auth.py  celery_app.py  chat.py  incidents.py  webhook.py  websocket.py
backend/app/schemas/: chat.py  incident.py  webhook.py
backend/app/services/: embedding_service.py  incident_service.py  notification_service.py
backend/app/tools/: docker_tools.py  loki_tools.py  otel_tools.py  policy_engine.py  prometheus_tools.py
backend/app/workers/: tasks.py
backend/prisma/: schema.prisma
backend/tests/: test_incidents.py  test_tools.py  test_webhook.py
infra/alertmanager/: alertmanager.yml
infra/loki/: loki-config.yml
infra/otel/: otel-collector.yml
infra/prometheus/: alert.rules.yml  prometheus.yml
infra/promtail/: promtail-config.yml
infra/sample-app/: Dockerfile  index.js  package-lock.json  package.json
