[project]
name = "devops-ai-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    # API
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "python-multipart==0.0.9",

    # Database
    "prisma==0.13.1",

    # Redis
    "redis==5.0.4",

    # Celery
    "celery==5.4.0",
    "flower==2.0.1",

    # Auth
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",

    # HTTP client
    "httpx==0.27.0",

    # Validation
    "pydantic==2.7.4",
    "pydantic-settings==2.2.1",

    # Structured logging
    "structlog==24.1.0",

    # WebSockets
    "websockets==12.0",

    # Docker SDK
    "docker==7.0.0",

    # LangChain ecosystem (compatible versions)
    "langchain==0.2.10",
    "langchain-core==0.2.26",
    "langchain-groq==0.1.9",
    "langgraph==0.1.19",

    # AI observability
    "langfuse==2.36.2",

    # Embeddings
    "sentence-transformers==3.0.1",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]